--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,36 @@
 # Basic Information 
-title: Yaoyao Liu
-position: Assistant Professor
-affiliation: University of Illinois Urbana-Champaign
-affiliation_link: https://www.illinois.edu/
-affiliation_logo: ./assets/img/illinois.svg
-email: lyy (at) illinois.edu
+title: Yueru Jia
+position: Master Student
+affiliation: School of Computer Science, Peking University
+# affiliation_link: https://www.illinois.edu/
+# affiliation_logo: ./assets/img/illinois.svg
+email: jiayueru (at) stu.pku.edu
 
 # Search Engine Optimization (SEO)
-keywords: yaoyao liu, liu yaoyao, yaoyaoliu, liuyaoyao
-canonical: https://yaoyaoliu.web.illinois.edu
-description: Yaoyao Liu is an assistant professor at the University of Illinois Urbana-Champaign. His research lies in meta-learning, incremental learning, and image generation.
+keywords: jiayueru, Yueru Jia, yueru jia, yuerujia
+canonical: https://jiayueru.github.io/
+description: Yueru Jia is a master student at Peking University. Her research lies in robotics and generative AI.
 
 # The option is used to enable the Illinois template.
-enable_hopkins_logo: true
+enable_hopkins_logo: false
 
 # The option is used to show the last update time.
 enable_last_update: false
 
 # Links
 link_type: icon #text/icon
-google_scholar: https://scholar.google.com/citations?user=Qi2PSmEAAAAJ
+google_scholar: https://scholar.google.cz/citations?hl=zh-CN&user=ysU_eckAAAAJ
 github_link: https://github.com/yaoyao-liu/
-linkedin: https://www.linkedin.com/in/liuyaoyao/
-twitter: https://twitter.com/YaoyaoLiu1/
+# linkedin: https://github.com/jiayueru
+twitter: https://x.com/JiaYueru68071
 
 # Images 
-avatar: https://img.yliu.me/avatar_new.jpg
-
+avatar: ./assets/img/me.jpg
+favicon: ./assets/img/pku.png
+favicon_dark: ./assets/img/pku.png
 # Footnotes
-footnote: Feel free to use my website's source code.
-footnote_link: https://github.com/yaoyao-liu/minimal-light
+# footnote: Feel free to use my website's source code.
+# footnote_link: https://github.com/yaoyao-liu/minimal-light
 
 # Analytics
 # Please remove the following lines about analytics services if you fork my project. 
