--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Yueru Jia
 position: Master Student
 affiliation: School of Computer Science, Peking University
-# affiliation_link: https://www.illinois.edu/
-# affiliation_logo: ./assets/img/illinois.svg
+affiliation_link: https://english.pku.edu.cn/
+affiliation_logo: ./assets/img/pku.svg
 email: jiayueru (at) stu.pku.edu
 
 # Search Engine Optimization (SEO)
