--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yueru Jia
 position: Master Student
 affiliation: School of Computer Science, Peking University
 affiliation_link: https://english.pku.edu.cn/
-affiliation_logo: ./assets/img/pku.svg
+affiliation_logo: ./assets/img/pku.png
 email: jiayueru (at) stu.pku.edu
 
 # Search Engine Optimization (SEO)
