--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,23 +1,23 @@
 main:
 
-  - title: "Openings"
-    url: /openings/
-    right: true 
+  # - title: "Openings"
+  #   url: /openings/
+  #   right: true 
 
-  - title: "Teaching"
-    url: /teaching/
+  # - title: "Teaching"
+  #   url: /teaching/
 
-  - title: "Services"
-    url: /services/
+  # - title: "Services"
+  #   url: /services/
 
-  - title: "Talks"
-    url: /talks/
+  # - title: "Talks"
+  #   url: /talks/
 
   #- title: "Teaching"
   #  url: ./teaching.html
 
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
 
   - title: "Home"
     url: /
