--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ position: Master Student
 affiliation: School of Computer Science, Peking University
 affiliation_link: https://english.pku.edu.cn/
 affiliation_logo: ./assets/img/white_icon.png
-email: jiayueru (at) stu.pku.edu
+email: jiayueru (at) stu.pku.edu.cn
 
 # Search Engine Optimization (SEO)
 keywords: jiayueru, Yueru Jia, yueru jia, yuerujia
